
[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
resolver ="2"
members = ["crates/coordinator/*", "crates/integrity/*"]

[workspace.dependencies]
#holochain = "0.1.5"
hdi = "0.3"
hdk = "0.2"
serde = "=1.0.163"

[workspace.dependencies.invitations_integrity]
path = "crates/integrity/invitations"

[workspace.dependencies.profiles_integrity]
path = "crates/integrity/profiles"