
[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
resolver ="2"
members = ["rna/coordinator/*", "rna/integrity/*"]

[workspace.dependencies]
hdi = "0.3"
hdk = "0.2"

[workspace.dependencies.invitations_integrity]
path = "rna/integrity/invitations"

[workspace.dependencies.profiles_integrity]
path = "rna/integrity/profiles"