[package]
name = "invitations"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "invitations"

[dependencies]
hc_rzome_invitations = {git = "https://github.com/holochain-engineers/invitations.git", branch = "main"}
hdk = { workspace = true }
#holochain = { workspace = true }
serde = { workspace = true }
invitations_integrity = { workspace = true }